javalin adicionado com hellodevs rodando

--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,16 @@
   <groupId>br.com.escolha</groupId>
   <artifactId>cursos-api</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+  	<dependency>
+		<groupId>io.javalin</groupId>
+    	<artifactId>javalin</artifactId>
+    	<version>4.4.0</version>
+	</dependency>
+	<dependency>
+		<groupId>org.slf4j</groupId>
+    	<artifactId>slf4j-simple</artifactId>
+    	<version>1.7.31</version>
+	</dependency>
+  </dependencies>
 </project>
